# breast_cancer_diagnosis_svm

./: .gitignore  README.md  pyproject.toml  ~$coming_tasks.docx
notebooks/: 01_exploration.ipynb
src/data/: load_data.py
src/utils/: project_paths.py  statistics.py  visualize.py
